v1.0.0 - Update Style + Fix body overflow

--- a/themes/uilite/static/css/styles.scss
+++ b/themes/uilite/static/css/styles.scss
@@ -1,13 +1,10 @@
-*{
-  // outline: 1px solid red;
-}
-
 html{
   overflow-x: hidden;
   overflow-y: scroll; 
 }
+
 body{
-  overflow: hidden;
+  overflow: hidden!important;
 }
 
 a{
